--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="images/lobster.png" alt="Anton Profile Picture"></td>
+      <td><img src="lobster.png" alt="Anton Profile Picture"></td>
       <td><h1>Anton</h1>
       <p><em>Beginner WEB-engineer and <strong><a href="https://skillcrush.com/blog/what-is-a-full-stack-developer/">Full Stack Developer</a></strong></em></p>
       <p>I study coding on Udemy</p>
